[gd_scene load_steps=24 format=2]

[ext_resource path="res://juego/Objetos/Flores.tscn" type="PackedScene" id=1]
[ext_resource path="res://recursos/modelos/RecursosPresentacion/Revamped.otf" type="DynamicFontData" id=2]
[ext_resource path="res://juego/Plataformas/FinalesPlataformas/BloquePastoFinal.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/Plataformas/PlataformasMitad/BloquePastoMitad.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego/Plataformas/Columnas/ColumnaBloquesTierra.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://juego/Portal/PuertaNivelSiguiente.tscn" type="PackedScene" id=7]
[ext_resource path="res://juego/HUD/HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://juego/Niveles/Nivel.gd" type="Script" id=9]
[ext_resource path="res://juego/Plataformas/PlataformasPequenias/BloquePastoPequenio.tscn" type="PackedScene" id=10]
[ext_resource path="res://juego/Plataformas/PlataformasLargas/BloquePastoLargo.tscn" type="PackedScene" id=11]
[ext_resource path="res://juego/Plataformas/PlataformasMitad/BloquePastoTierra.tscn" type="PackedScene" id=12]
[ext_resource path="res://juego/Items/MonedaBronce.tscn" type="PackedScene" id=13]
[ext_resource path="res://juego/Objetos/Bandera.tscn" type="PackedScene" id=14]
[ext_resource path="res://juego/Objetos/Arbol.tscn" type="PackedScene" id=15]
[ext_resource path="res://juego/Menus/MenuDePausa.tscn" type="PackedScene" id=16]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0, 0.545098, 0.74902, 1 )
sky_horizon_color = Color( 1, 0.866667, 0.513726, 1 )
sky_curve = 0.0593779
ground_bottom_color = Color( 0.00784314, 0.0156863, 0.427451, 1 )
ground_horizon_color = Color( 0.54902, 0.545098, 0.368627, 1 )
ground_curve = 0.0146408

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0196078, 0.258824, 0.129412, 1 )

[sub_resource type="PlaneMesh" id=4]
material = SubResource( 3 )
size = Vector2( 100, 100 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 50, 0.001, 50 )

[sub_resource type="DynamicFont" id=6]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AdvertenciaGuardado:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Nivel1" type="Node"]
script = ExtResource( 9 )
siguiente_nivel = "res://juego/Niveles/Nivel2.tscn"
numero_nivel = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="MenuDePausa" parent="." instance=ExtResource( 16 )]

[node name="Suelo" type="StaticBody" parent="."]
collision_mask = 70

[node name="MeshInstance" type="MeshInstance" parent="Suelo"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Suelo"]
shape = SubResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.447962, 0.894053, 0, -0.894053, 0.447962, 0, 15.5851, 0 )
light_color = Color( 1, 0.992157, 0.447059, 1 )
light_energy = 0.8
light_specular = 0.4
shadow_enabled = true

[node name="Borde" type="Spatial" parent="."]

[node name="BordeNorte" type="Spatial" parent="Borde"]

[node name="ColumnaBloquesTierra" parent="Borde/BordeNorte" instance=ExtResource( 5 )]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50.5 )

[node name="BordeOeste" type="Spatial" parent="Borde"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="ColumnaBloquesTierra" parent="Borde/BordeOeste" instance=ExtResource( 5 )]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50.5 )

[node name="BordeEste" type="Spatial" parent="Borde"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="ColumnaBloquesTierra" parent="Borde/BordeEste" instance=ExtResource( 5 )]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50.5 )

[node name="BordeSur" type="Spatial" parent="Borde"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -101 )

[node name="ColumnaBloquesTierra" parent="Borde/BordeSur" instance=ExtResource( 5 )]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50.5 )

[node name="Plataformas" type="Node" parent="."]

[node name="BloquePastoMitad" parent="Plataformas" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -11.3 )

[node name="BloquePastoMitad2" parent="Plataformas" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, -8.2 )

[node name="BloquePastoMitad3" parent="Plataformas" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.9, -5.6 )

[node name="BloquePastoFinal" parent="Plataformas" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 1.9, -4.6 )

[node name="ColumnaBloquesTierra" parent="Plataformas" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -1.6 )

[node name="BloquePastoLargo" parent="Plataformas" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.9, 4.9, 4.1 )

[node name="BloquePastoLargo2" parent="Plataformas" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.9, 4.9, 6.1 )

[node name="BloquePastoPequenio" parent="Plataformas" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7, 5.2, 9.6 )

[node name="BloquePastoPequenio2" parent="Plataformas" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6, 5.2, 12.9 )

[node name="BloquePastoPequenio3" parent="Plataformas" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6, 5.2, 15.4 )

[node name="BloquePastoTierra" parent="Plataformas" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 5.9, 20.5 )

[node name="BloquePastoTierra2" parent="Plataformas" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 5.9, 20.5 )

[node name="BloquePastoTierra3" parent="Plataformas" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 5.9, 20.5 )

[node name="ContenedorDanio" type="Node" parent="."]

[node name="ContenedorMonedas" type="Node" parent="."]

[node name="MonedaBronce" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9, 6.3, -1.5 )

[node name="MonedaBronce6" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.3, 9.1, 1.2 )

[node name="MonedaBronce8" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 6.1, 4.6 )

[node name="MonedaBronce9" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 6.1, 6.5 )

[node name="MonedaBronce10" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7, 6.3, 9.6 )

[node name="MonedaBronce11" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6, 6.3, 13 )

[node name="MonedaBronce12" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6, 6.3, 15.4 )

[node name="MonedaBronce13" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6, 7.4, 17.1 )

[node name="MonedaBronce14" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6, 7.9, 17.1 )

[node name="MonedaBronce7" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9, 7.8, 0.6 )

[node name="MonedaBronce2" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.7, -4.7 )

[node name="MonedaBronce3" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.7, -5.3 )

[node name="MonedaBronce5" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 3.1, -7.5 )

[node name="MonedaBronce4" parent="ContenedorMonedas" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.7, -5.9 )

[node name="ContenedorProps" type="Node" parent="."]

[node name="CosasExtra" type="Node" parent="."]

[node name="AdvertenciaGuardado" type="Label" parent="CosasExtra"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -278.128
margin_top = -67.0
margin_right = -17.1278
margin_bottom = -20.0
custom_fonts/font = SubResource( 6 )
text = "GUARDANDO PARTIDA
NO SALGA DEL NIVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CosasExtra"]
autoplay = "Titilar"
anims/Titilar = SubResource( 7 )

[node name="Timer" type="Timer" parent="CosasExtra"]
wait_time = 4.0
one_shot = true

[node name="Decoracion" type="Node" parent="."]

[node name="ContenedorFlores" type="Node" parent="Decoracion"]

[node name="Flores" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4, 0, -6.6 )

[node name="Flores5" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.3, 0, -27.2 )

[node name="Flores6" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.3, 0, -7.8 )

[node name="Flores7" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.6, 0, -42.6 )

[node name="Flores8" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.9, 0, -43.2 )

[node name="Flores26" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.7, 0, -32.7 )

[node name="Flores27" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0, -15 )

[node name="Flores28" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.9, 0, -37.5 )

[node name="Flores9" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.1, 0, -41.6 )

[node name="Flores10" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, 0.1, -20.5 )

[node name="Flores11" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -21.9, 0.1, -6.8 )

[node name="Flores12" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.4, 0.1, -24.8 )

[node name="Flores13" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.4, 0.1, -7.9 )

[node name="Flores14" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -41.3, 0.1, -37.6 )

[node name="Flores15" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.8, 0.1, 5.2 )

[node name="Flores16" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.5, 0.1, 2.7 )

[node name="Flores17" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.9, 0.1, 23.6 )

[node name="Flores18" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.5, 0.1, 42.8 )

[node name="Flores19" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -33.6, 0.1, 38.3 )

[node name="Flores20" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.5, 0.1, 27.3 )

[node name="Flores21" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 45.4, 0.1, 15.5 )

[node name="Flores22" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.1, 0.1, -27.4 )

[node name="Flores23" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.1, -1.9 )

[node name="Flores24" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.7, 0.1, 14.4 )

[node name="Flores25" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.1, 0.1, -42.3 )

[node name="Flores2" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.9, 0, 11.9 )

[node name="Flores3" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.4, 0, 24.7 )

[node name="Flores4" parent="Decoracion/ContenedorFlores" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 34.1, 0, 23.3 )

[node name="ContenedorArboles" type="Node" parent="Decoracion"]

[node name="Arbol" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -21.5, 0, -10.2 )

[node name="Arbol22" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -3.5, 0, -29.9 )
collision_layer = 1
collision_mask = 1

[node name="Arbol2" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -0.4, 0, -43.8 )

[node name="Arbol3" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -17, 0, -46.6 )

[node name="Arbol4" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -44.2, 0, -18.6 )

[node name="Arbol5" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 43.2, 0, -23.7 )

[node name="Arbol6" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -37.8, 0, -45.9 )

[node name="Arbol7" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -46.8, 0, 9.6 )

[node name="Arbol8" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -23.6, 0, 11.1 )

[node name="Arbol9" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -22, 0, -25 )

[node name="Arbol10" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -19.7, 0, 20.5 )

[node name="Arbol11" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -19, 0, 45.2 )

[node name="Arbol12" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -30.2, 0, 32.5 )

[node name="Arbol13" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -31.4, 0, 19.7 )

[node name="Arbol14" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -47.5, 0, 30.1 )

[node name="Arbol15" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 11.4, 0, 38.8 )

[node name="Arbol16" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 22.5, 0, 26.9 )

[node name="Arbol17" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 20.8, 0, -2.9 )

[node name="Arbol18" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 31.6, 0, 42.8 )

[node name="Arbol19" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 41.1, 0, 7.7 )

[node name="Arbol20" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 32.5, 0, -45.3 )

[node name="Arbol21" parent="Decoracion/ContenedorArboles" instance=ExtResource( 15 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 17.3, 0, -20.3 )

[node name="Bandera" parent="Decoracion" instance=ExtResource( 14 )]
transform = Transform( 3.5, 0, 0, 0, 3.5, 0, 0, 0, 3.5, 3.8, 6.4, 20.6 )

[node name="MarkIV" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, -16 )

[node name="PuertaNivelSiguiente" parent="." instance=ExtResource( 7 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 5, 6.3, 20.7 )

[connection signal="timeout" from="CosasExtra/Timer" to="." method="_on_Timer_timeout"]
